Invite attribution: tests, and the analysis gates they have to pass
Adds 33 unit tests over the invite client: minting offline, url and referrer
parsing, the funnel events, the consent state machine, erasure, and
exactly-once delivery.

Three of them are the ones worth keeping honest about:

- resetClientId must clear the referral dimensions AND leave the
  application's own dimensions alone. Both halves are asserted, because
  either one alone is a bug.
- Opt-out consent mode alone must not authorise the statistical match. The
  deprecated AnalyticsService forces that mode, so the ordinary gate reports
  permission with no user choice on record.
- A dismissed share sheet must never report invite_shared, which is what
  makes the shared count a measurement rather than an assumption.

The referrer key is compared with equals and never case folded, and a test
pins that a differently cased key does not match: String.toLowerCase is
locale sensitive with no root-locale overload in this runtime, so a folded
comparison silently stops matching under a Turkish default locale.

Ten SpotBugs findings and four cast-semantics findings in the new code are
fixed rather than excluded. The one exclusion added is scoped to
Invites$InviteConnection, a one-shot ConnectionRequest that is never compared
or used as a map key -- the same idiom and reasoning as the existing
OsrmRouteService$RouteConnection entry. The casts were rewritten into the
positive instanceof form the verifier recognises, which matters beyond the
gate: ParparVM does not throw on a failed cast, so the surrounding
catch(Throwable) would never have run on iOS.